Fix editor selection tabs to fit on mobile

--- a/packages/studio/pages/apps/app/edit/index.module.css
+++ b/packages/studio/pages/apps/app/edit/index.module.css
@@ -14,3 +14,11 @@
 .editor {
   height: 100%;
 }
+
+.editorTabs {
+  max-width: 100%;
+}
+
+.editorTabs > li {
+  max-width: 33%;
+}
